fix(monaco): tooltips clipping by other editors

--- a/src/less/components/editors.less
+++ b/src/less/components/editors.less
@@ -24,8 +24,9 @@
   }
 }
 
+// TODO: support new file
 // update if list of Editor ID changes
-@editor-ids: main, renderer, html, preload;
+@editor-ids: main\.js, renderer\.js, index\.html, preload\.js;
 
 // takes each editor ID and increase its z-index if the parent Mosaic root
 // has focused__id class for that specific id.
